# qt-video-editor

./: .gitignore  AudioData.cpp  AudioData.h  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  Video.cpp  Video.h  VideoData.cpp  VideoData.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-video-editor.pro  save.json  timelinewidget.cpp  timelinewidget.h  ui_mainwindow.h  videoperviewwidget.cpp  videoperviewwidget.h  videotablewidget.cpp  videotablewidget.h
include/: AddTextDialog.h  AudioData.h  Caretaker.h  CutLeftOperation.h  CutRightOperation.h  Editor.h  Indicator.h  Memento.h  Operation.h  Options.h  Originator.h  ProjectLoader.h  ProjectSaver.h  TextData.h  TimeLine.h  VideoCombiner.h  VideoData.h  VideoPerview.h  VideoTable.h  mainwindow.h
release/: object_script.qt-video-editor.Release
src/: AddTextDialog.cpp  AudioData.cpp  Caretaker.cpp  CutLeftOperation.cpp  CutRightOperation.cpp  Editor.cpp  Indicator.cpp  Memento.cpp  Operation.cpp  Options.cpp  Originator.cpp  ProjectLoader.cpp  ProjectSaver.cpp  TextData.cpp  TimeLine.cpp  VideoCombiner.cpp  VideoData.cpp  VideoPerview.cpp  VideoTable.cpp  main.cpp  mainwindow.cpp
styles/: app.qss
ui/: mainwindow.ui  ui_mainwindow.h
